Fixed router(links) clashes
